# VGGT-SLAM-public

./: .gitignore  README.md  adjust_dmt_poses.py  dockerfile.thor  domain.py  http_utils.py  main.py  main_aqr.py  marker_calibrator.py  requirements.txt
ZapvisionLinux/: CMakeLists.txt  Zapvision.h  main.cpp  pybind-build.md  readme.md  setup.py  zapvision_pybind.cpp
ZapvisionLinux/test/: zapvision_test.py
ZapvisionLinux/zapvision_py/: __init__.py
vggt_slam/: loop_closure.py  map.py  solver.py  submap.py
